TerraformAWS/instances.tf
resource "aws_instance" "frontend" {
  ami                    = "ami-005fc0f236362e99f" 
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.my_key.key_name  
  subnet_id              = aws_subnet.frontend_subnet.id
  vpc_security_group_ids = [aws_security_group.allow_all_sg.id]
  associate_public_ip_address = true

  tags = {
    Name = "FrontendInstance"
  }
}

resource "aws_instance" "backend" {
  ami                    = "ami-005fc0f236362e99f" 
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.my_key.key_name  
  subnet_id              = aws_subnet.backend_subnet.id
  vpc_security_group_ids = [aws_security_group.allow_all_sg.id]
  associate_public_ip_address = true

  tags = {
    Name = "BackendInstance"
  }
}

resource "aws_instance" "database" {
  ami                    = "ami-005fc0f236362e99f" 
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.my_key.key_name  
  subnet_id              = aws_subnet.database_subnet.id
  vpc_security_group_ids = [aws_security_group.allow_all_sg.id]
  associate_public_ip_address = true

  tags = {
    Name = "DatabaseInstance"
  }
}

# Outputs for public IP addresses
output "frontend_public_ip" {
  value = aws_instance.frontend.public_ip
}

output "backend_public_ip" {
  value = aws_instance.backend.public_ip
}

output "database_public_ip" {
  value = aws_instance.database.public_ip
}

# Створення Ansible інвентарного файлу
resource "local_file" "ansible_inventory" {
  content = <<EOT
all:
  hosts:
    frontend:
      ansible_host: ${aws_instance.frontend.public_ip}
      ansible_user: ubuntu
      ansible_ssh_private_key_file: /home/jenkins/workspace/java-pipeline/terraformAWS/key/my_ssh_key
      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'

    backend:
      ansible_host: ${aws_instance.backend.public_ip}
      ansible_user: ubuntu
      ansible_ssh_private_key_file: /home/jenkins/workspace/java-pipeline/terraformAWS/key/my_ssh_key
      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'

    database:
      ansible_host: ${aws_instance.database.public_ip}
      ansible_user: ubuntu
      ansible_ssh_private_key_file: /home/jenkins/workspace/java-pipeline/terraformAWS/key/my_ssh_key
      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'

  children:
    frontend_group:
      hosts:
        frontend

    backend_group:
      hosts:
        backend

    database_group:
      hosts:
        database
EOT

  filename = "${path.module}/inventory.yml"
}
